--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-select": "^5.7.2",
-    "react-slider": "^2.0.4"
+    "react-slider": "^2.0.4",
+    "swr": "^2.2.4"
   }
 }
