--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "bcrypt": "^5.1.0",
+    "clsx": "^2.1.0",
     "cookies-next": "^2.1.1",
     "date-fns": "^2.29.3",
     "formidable": "^2.1.1",
@@ -29,6 +30,12 @@
     "react-redux": "^8.0.5",
     "react-select": "^5.7.2",
     "react-slider": "^2.0.4",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "tailwind-merge": "^2.2.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
